--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <link href="//cdn.quilljs.com/1.3.6/quill.core.css" rel="stylesheet">
 <script src="//cdn.quilljs.com/1.3.6/quill.core.js"></script>
 </head>
-<body>
+<body style="background-color: #f7f8fa;">
   <app-root></app-root>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
